# bacphen-awareness

./: .gitignore  Makefile  main.py  pyproject.toml
data/: bacdive_decision_log.tsv  bacdive_enum_merge_log.tsv  bacdive_enum_value_pairs_named_v2.tsv  bacdive_path_to_enum_named_v2.tsv
data/954eac922928d7abfd6130e7cc64a88c/: bacdive_strains_genson_schema.json
data/output/: f9182e926889b24b86073cc384097c03_vs_954eac922928d7abfd6130e7cc64a88c_schema_deep_diff.json
data/output/954eac922928d7abfd6130e7cc64a88c/: bacdive_distinct_value_counts.tsv  bacdive_enum_value_pairs.tsv  bacdive_enum_values.tsv  bacdive_path_counts_merged.tsv  bacdive_path_to_enum.tsv  bacdive_strains_path_counts.txt
data/output/f9182e926889b24b86073cc384097c03/: bacdive_strains_as_list_genson_schema.json
data/taxon-lists/: non_subclass_connected_nodes.tsv
src/bacdive_tools/: cli.py  discover_enums.py  export_enum_values.py  histogram_path_counts.py  merge_path_counts.py  tabulate_path_values.py
src/bacphen_awareness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
